<resources>
    <string name="app_name">calculator</string>
    <string name="action_settings">Settings</string>

    <string name="display_text">display_text</string>
    <string name="display_hint">display_hint</string>

    <string name="m_ex"> M/EX </string>
    <string name="m_plus"> M+ </string>
    <string name="m_minus"> M- </string>
    <string name="mrc"> MRC </string>
    <string name="plus_minus"> +/- </string>
    <string name="clear_whole_expression"> C </string>
    <string name="all_clear_memory"> AC </string>

    <string name="addition"> + </string>
    <string name="substraction"> - </string>
    <string name="multiplication"> * </string>
    <string name="division"> / </string>
    <string name="modulus"> % </string>
    <string name="sqrt">√</string>
    <string name="equal"> = </string>

    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>


    <string name="row_three"> row_three</string>
</resources>
